# flask-api-autodoc

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  logging.default.yaml  pyproject.toml  pytest.default.ini  setup.cfg  setup.py  tox.ini
src/flask_api_autodoc/: docstring.py  template.html  view.py
tests/: test_rest_api_doc.py
