[tool.poetry]
name = "flask-api-autodoc"
version = "1.0.0"
description = "A Python module to generate a page documenting the API of a Flask application."
readme = "README.md"
authors = ["Lawrence Siden <lsiden@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lsiden/flask-api-autodoc"
classifiers =[
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Framework :: Flask",
]
packages = [
  { include="flask_api_autodoc", from="src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.7.4"
poetry = "^1.1.5"
tox = "^3.23.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
