[metadata]
name = flask_api_autodoc
version = 1.0.0
author = Lawrence Siden
author_email = lsiden@gmail.com
license = MIT
description = Generates API documentation for Flask app in HTML
keywords = flask, documentation
url = https://github.com/lsiden/flask-api-autodoc
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Topic :: Software Development :: Documentation
	Framework :: Flask

[options]
package_dir=
	= src
packages = flask_api_autodoc
zip_safe = False
install_requires = flask
include_package_data = True
python_requires = >=3.8
tests_require =
  pytest

[tool:pytest]
testpaths = tests
